add GC debugging output